[package]
name = "zupy-pinocchio"
version = "1.0.1"
edition = "2021"
description = "Solana program for the ZUPY token ecosystem"
license = "Apache-2.0"
repository = "https://github.com/zupy-fmartinelli/zupy-token-program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["devnet"]
devnet = []
production = []
mainnet = ["production"]
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-system = "0.5"
pinocchio-token-2022 = "0.2"
pinocchio-associated-token-account = "0.3"
five8_const = "1.0"
solana-address = { version = "2.0", features = ["curve25519"] }
light-sdk-pinocchio = { version = "0.22.0", features = ["light-account"] }
light-token-pinocchio = "0.22.0"
solana-security-txt = "1.1.2"

[dev-dependencies]
mollusk-svm = "0.10"
mollusk-svm-programs-token = { version = "0.10", features = ["token-2022", "associated-token"] }
sha2 = "0.10"
solana-pubkey = "4.0"
solana-instruction = "3.0"
solana-account = "3.2"
light-program-test = "0.22.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
strip = true
